# wttd

./: .gitignore  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  pyvenv.cfg  requeriments.txt  requirements-dev.txt  requirements.txt
contrib/: env-sample
eventex/: settings.py  urls.py  wsgi.py
eventex/core/: tests.py
eventex/core/templates/: index.html
eventex/nucleo/: admin.py  apps.py  managers.py  models.py  views.py
eventex/nucleo/fixtures/: keynotes.json
eventex/nucleo/migrations/: 0001_initial.py  0002_auto_20211126_2140.py  0003_contact.py  0004_auto_20211126_2252.py  0005_talk.py  0006_auto_20211129_1955.py  0007_alter_talk_start.py  0008_course.py
eventex/nucleo/static/css/: main.css
eventex/nucleo/templates/: 400.html  403.html  404.html  500.html  base.html  index.html  nav.html
eventex/nucleo/templates/nucleo/: speaker_detail.html  talk_list.html  talk_list_snippet.html
eventex/nucleo/tests/: test_model_contact.py  test_model_speaker.py  test_model_talk.py  test_view_home.py  test_view_speaker_detail.py  test_view_talk_list.py
eventex/subscriptions/: admin.py  apps.py  forms.py  models.py  test.py  urls.py  validators.py  views.py
eventex/subscriptions/migrations/: 0001_initial.py  0002_auto_20211125_1854.py  0003_alter_subscription_paid.py  0004_auto_20211126_1749.py
eventex/subscriptions/tests/: test_admin.py  test_form_subscription.py  test_mail_subscribe.py  test_model_subscriptions.py  test_view_detail.py  test_view_new.py  test_view_subscribe.py
include/: python3.8
wttd/: asgi.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
