[tool.poetry]
name = "wttd"
version = "0.1.0"
description = ""
authors = ["Welington Carlos <wcarlos3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
